--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,14 +10,14 @@ section {
     align-items: center;
 
 
-article{
-    width: 300px;
-    height: 300px;
-    background: hotpink;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 30px;
-    color: #fff;
-}
+    article{
+        width: 300px;
+        height: 300px;
+        background: Aqua;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 30px;
+        color: #fff;
+    }
 }
