--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,7 +13,7 @@ section {
     article{
         width: 300px;
         height: 300px;
-        background: Aqua;
+        background: hotpink;
         display: flex;
         justify-content: center;
         align-items: center;
